--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "^5.1.5",
     "typescript": "3.7.5"
   },
   "scripts": {
